Right section changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </button>
                 <a class="navbar-brand logo" href="index.html">
                     <strong>mCHEMo</strong>
-                    <div class="subTitle">MECHANISM OF CHEMOTHERAPY</div>
+                    <div class="subTitle">MECHANISMS OF CHEMOTHERAPY</div>
                 </a>
             </div>
             <!-- Top Menu Items -->
@@ -88,10 +88,40 @@
                                 <a href="javascript:;" data-toggle="collapse" data-target="#singleCancer"><i class="fa fa-fw fa-plus-square secondLevel"></i>  Single Cancer Analysis </a>
                                 <ul id="singleCancer" class="collapse">
                                     <li>
-                                        <a href="#">Breast Cancer</a>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#brainCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Brain Cancer </a>
+                                      <ul id="brainCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Brain Lower Grade Glioma</a>
+                                          </li>
+                                          <li>
+                                              <a href="#">Glioblastoma Multiforme</a>
+                                          </li>
+                                      </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Cervical Cancer</a>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#bladderCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Bladder Cancer </a>
+                                      <ul id="bladderCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Bladder Urothelial Carcinoma</a>
+                                          </li>
+                                      </ul>
+                                    </li>
+
+                                    <li>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#breastCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Breast Cancer </a>
+                                      <ul id="breastCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Breast Invasive Carcinoma</a>
+                                          </li>
+                                      </ul>
+                                    </li>
+                                    <li>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#cervicalCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Cervical Cancer </a>
+                                      <ul id="cervicalCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Cervical Squamous Cell Carcinoma</a>
+                                          </li>
+                                      </ul>
                                     </li>
                                     <li>
                                         <a href="javascript:;" data-toggle="collapse" data-target="#colorectalCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Colorectal Cancer </a>
@@ -118,8 +148,16 @@
                                                 <a href="#">Kidney Renal Papillary Cell Carcinoma</a>
                                             </li>
                                         </ul>
-
                                     </li>
+                                    <li>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#leukemia"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Leukemia</a>
+                                      <ul id="leukemia" class="collapse">
+                                          <li>
+                                              <a href="#">Acute Myeloid Leukemia</a>
+                                          </li>
+                                      </ul>
+                                    </li>
+
                                     <li>
                                         <a href="javascript:;" data-toggle="collapse" data-target="#lungCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Lung Cancer </a>
                                         <ul id="lungCancer" class="collapse">
@@ -133,15 +171,42 @@
 
                                     </li>
                                     <li>
-                                        <a href="#">Prostate Cancer</a>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#ovaryCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Ovary Cancer</a>
+                                      <ul id="ovaryCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Ovarian Serous Cystadenocarcinoma</a>
+                                          </li>
+                                      </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Skin Cancer</a>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#pancreaticCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Pancreatic Cancer</a>
+                                      <ul id="pancreaticCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Pancreatic Adenocarcinoma</a>
+                                          </li>
+                                      </ul>
+                                    </li>
+                                    <li>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#skinCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Skin Cancer</a>
+                                      <ul id="skinCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Skin Cutaneous Melanoma</a>
+                                          </li>
+                                      </ul>
+                                    </li>
+
+                                    <li>
+                                      <a href="javascript:;" data-toggle="collapse" data-target="#stomachCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Stomach Cancer</a>
+                                      <ul id="stomachCancer" class="collapse">
+                                          <li>
+                                              <a href="#">Stomach Adenocarcinoma</a>
+                                          </li>
+                                      </ul>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#multipleCancer"><i class="fa fa-fw fa-plus-square secondLevel"></i>  Multiple Cancer Analysis </a>
+                                <a href="javascript:;" data-toggle="collapse" data-target="#panCancer"><i class="fa fa-fw fa-plus-square secondLevel"></i>  Pan Cancer Analysis </a>
 
                             </li>
                         </ul>
@@ -168,16 +233,7 @@
                                                 <a href="#">Antimetabolite</a>
                                             </li>
                                             <li>
-                                                <a href="#">Antineoplastic Agent</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Aromatase Inhibitor</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Heparanase Inhibitor</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Kinase Inhibitor</a>
+                                                <a href="#">Antitumor Antibiotic</a>
                                             </li>
                                             <li>
                                                 <a href="#">Plant Alkanoid</a>
@@ -275,7 +331,7 @@
                 <!-- Page Heading -->
 
                 <div class="row">
-                    <div class="col-sm-12 ">
+                    <div class="col-sm-12">
                         <ol class="breadcrumb breadcrumb-arrow">
                             <li><a href="#">Genomic/Epigenomic Analysis</a></li>
                             <li><a href="#">Molecular Pathway</a></li>
@@ -289,9 +345,9 @@
                 <!-- /.row -->
                 <div class="row">
                     <div class="well well-sm col-sm-12">
-                        <div class="container-fluid">
+                        <div class="container-fluid info">
                             <div class="row">
-                                <button type="button" class="btn btn-warning col-sm-offset-2 col-sm-4 ">
+                                <button type="button" class="btn btn-primary col-sm-offset-2 col-sm-4 ">
                                                      <strong>Cancer Type</strong></button>
                                 <button type="button" class="btn btn-default col-sm-4">
                                                          <strong>...</strong></button>
@@ -316,7 +372,7 @@
                     <div class="well well-sm col-sm-12">
                         <div class="row info">
                             <div class="col-sm-5">
-                                <h4 class="text-primary"><strong class="text-center">  Select Patient:</strong> </h4>
+                                <h4 class="text-primary patient"><strong class="text-center">  Select Patient:</strong> </h4>
                             </div>
                             <div class="col-sm-7">
                                 <div class="form-group">
@@ -358,6 +414,38 @@
                                         <td> --- </td>
                                         <td> --- </td>
                                     </tr>
+                                    <tr>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                    </tr>
+                                    <tr>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                    </tr>
+                                    <tr>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                    </tr>
+                                    <tr>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                        <td> --- </td>
+                                    </tr>
                                 </tbody>
 
                             </table>
@@ -365,6 +453,11 @@
                     </div>
                 </div>
 
+                <div class="row">
+                  <button type="button" class="btn btn-primary pull-right">
+                    Submit
+                  </button>
+                </div>
             </div>
             <!-- /.container-fluid -->
 
