styling styling and styling

--- a/index.html
+++ b/index.html
@@ -88,40 +88,40 @@
                                 <a href="javascript:;" data-toggle="collapse" data-target="#singleCancer"><i class="fa fa-fw fa-plus-square secondLevel"></i>  Single Cancer Analysis </a>
                                 <ul id="singleCancer" class="collapse">
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#brainCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Brain Cancer </a>
-                                      <ul id="brainCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Brain Lower Grade Glioma</a>
-                                          </li>
-                                          <li>
-                                              <a href="#">Glioblastoma Multiforme</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#brainCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Brain Cancer </a>
+                                        <ul id="brainCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Brain Lower Grade Glioma</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Glioblastoma Multiforme</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#bladderCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Bladder Cancer </a>
-                                      <ul id="bladderCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Bladder Urothelial Carcinoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#bladderCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Bladder Cancer </a>
+                                        <ul id="bladderCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Bladder Urothelial Carcinoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
 
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#breastCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Breast Cancer </a>
-                                      <ul id="breastCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Breast Invasive Carcinoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#breastCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Breast Cancer </a>
+                                        <ul id="breastCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Breast Invasive Carcinoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#cervicalCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Cervical Cancer </a>
-                                      <ul id="cervicalCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Cervical Squamous Cell Carcinoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#cervicalCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Cervical Cancer </a>
+                                        <ul id="cervicalCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Cervical Squamous Cell Carcinoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li>
                                         <a href="javascript:;" data-toggle="collapse" data-target="#colorectalCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Colorectal Cancer </a>
@@ -150,12 +150,12 @@
                                         </ul>
                                     </li>
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#leukemia"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Leukemia</a>
-                                      <ul id="leukemia" class="collapse">
-                                          <li>
-                                              <a href="#">Acute Myeloid Leukemia</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#leukemia"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Leukemia</a>
+                                        <ul id="leukemia" class="collapse">
+                                            <li>
+                                                <a href="#">Acute Myeloid Leukemia</a>
+                                            </li>
+                                        </ul>
                                     </li>
 
                                     <li>
@@ -171,37 +171,37 @@
 
                                     </li>
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#ovaryCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Ovary Cancer</a>
-                                      <ul id="ovaryCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Ovarian Serous Cystadenocarcinoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#ovaryCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Ovary Cancer</a>
+                                        <ul id="ovaryCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Ovarian Serous Cystadenocarcinoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#pancreaticCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Pancreatic Cancer</a>
-                                      <ul id="pancreaticCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Pancreatic Adenocarcinoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#pancreaticCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Pancreatic Cancer</a>
+                                        <ul id="pancreaticCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Pancreatic Adenocarcinoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#skinCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Skin Cancer</a>
-                                      <ul id="skinCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Skin Cutaneous Melanoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#skinCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Skin Cancer</a>
+                                        <ul id="skinCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Skin Cutaneous Melanoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
 
                                     <li>
-                                      <a href="javascript:;" data-toggle="collapse" data-target="#stomachCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Stomach Cancer</a>
-                                      <ul id="stomachCancer" class="collapse">
-                                          <li>
-                                              <a href="#">Stomach Adenocarcinoma</a>
-                                          </li>
-                                      </ul>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#stomachCancer"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Stomach Cancer</a>
+                                        <ul id="stomachCancer" class="collapse">
+                                            <li>
+                                                <a href="#">Stomach Adenocarcinoma</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
@@ -330,15 +330,13 @@
 
                 <!-- Page Heading -->
 
-                <div class="row">
-                    <div class="col-sm-12">
-                        <ol class="breadcrumb breadcrumb-arrow">
-                            <li><a href="#">Genomic/Epigenomic Analysis</a></li>
-                            <li><a href="#">Molecular Pathway</a></li>
-                            <li class="active"><span>Clinical Validation</span></li>
-                        </ol>
+                <div class="row navCrumbs">
+                    <ol class="breadcrumb breadcrumb-arrow">
+                        <li><a href="#">Genomic / Epigenomic Analysis</a></li>
+                        <li><a href="#">Molecular Pathway</a></li>
+                        <li class="active"><span>Clinical Validation</span></li>
+                    </ol>
 
-                    </div>
                 </div>
 
 
@@ -454,7 +452,7 @@
                 </div>
 
                 <div class="row">
-                  <button type="button" class="btn btn-primary pull-right">
+                    <button type="button" class="btn btn-lg btn-primary pull-right">
                     Submit
                   </button>
                 </div>
