--- a/index.html
+++ b/index.html
@@ -388,8 +388,11 @@
 
 
                 <div class="row">
-                    <div class="well well-sm">
-                        <div class="table-responsive">
+                    <div class="well well-sm text-center">
+                        <div class="jumbotron">
+                            <p class="text-success"> This section is under construction! </p>
+                        </div>
+                        <!-- <div class="table-responsive">
                             <table class="table table-hover">
 
                                 <thead>
@@ -447,7 +450,7 @@
                                 </tbody>
 
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
